# hello-im-angel

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT-COMPLETE.md  DEPLOYMENT-GUIDE.md  Dockerfile  NEXT-STEPS.md  PROJECT-ARCHITECTURE.md  README.md  fly.toml  package-lock.json  package.json  setup-hostinger-dns.js  tailwind.config.js  tsconfig.json
backend/: .env.example  .gitignore  Cargo.toml
backend/migrations/: 001_initial_schema.sql  002_seed_data.sql
backend/src/: main.rs
backend/src/db/: mod.rs
backend/src/handlers/: contacts.rs  experiences.rs  github.rs  mod.rs  projects.rs  resume.rs  skills.rs
backend/src/models/: contact.rs  experience.rs  mod.rs  project.rs  resume.rs  skill.rs
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
frontend/app/about/: page.tsx
frontend/app/blog/: page.tsx
frontend/app/connect/: ConnectForm.tsx  page.tsx
frontend/app/skills/: page.tsx
frontend/app/work/: page.tsx
frontend/components/3d/: Hero3D.tsx  Scene.tsx
frontend/components/forms/: ContactForm.tsx
frontend/lib/: analytics.ts  api.ts  blog.ts  projects.ts  store.ts  types.ts
frontend/public/: site.webmanifest
migrations/: 20250109000001_create_contact_messages.sql
src/: main.rs  models.rs
src/handlers/: contact.rs  mod.rs  pages.rs
static/css/: input.css
static/js/: main.ts
templates/: base.html
templates/components/: footer.html  nav.html
templates/pages/: about.html  contact.html  index.html  projects.html
(+16 files in other folders)
